# formosa1544

./: .gitignore  LICENSE  README.md  README.rst
logo/: converter.py  logo.py  logo.rst
machine-learning-basics-and-perceptron-learning-algorithm/: example.py  perceptron_classifier.py  supervised.py  unsupervised.py
my-python-coding-style-and-principles/: LICENSE  README.md  queue_example.py  stack_example.py  tree_example.py
my-python-coding-style-and-principles/my_package/: __init__.py  prime_generator.py
pocket-learning-algorithm-and-feature-engineering/: input_missing_example.py  iris_example.py  iris_training_and_test_example.py  one_hot_encode_example.py  perceptron_classifier.py  pocket_classifier.py  pocket_learning_algorithm_example.py
python_vs_cpp_series/getter_setter_and_property/: cpp_example.cpp  python_example.py  python_property.py
python_vs_cpp_series/mutable_immutable_and_copy_assignment/: cpp_example.cpp  python_copy.py  python_copy_module.py  python_deep_copy.py  python_example.py  python_id.py  python_mutable_class_variable.py  python_mutable_default_function_parameter.py  python_shallow_copy.py  shallow_copy.drawio
python_vs_cpp_series/polymorphism_and_duck_typing/: cpp_function_overloading.cpp  (+8 more)
quick-start-to-use-visual-studio-code-for-cpp-programmers-in-linux/QuickStartCMake/: CMakeLists.txt
quick-start-to-use-visual-studio-code-for-cpp-programmers-in-linux/QuickStartCMake/include/: QuickStart.hpp
quick-start-to-use-visual-studio-code-for-cpp-programmers-in-linux/QuickStartCMake/test/: CMakeLists.txt  QuickStartTest.cpp
(+56 files in other folders)
